[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "diffms"
version = "1.0.0"
description = "DiffMS: Diffusion Generation of Molecules Conditioned on Mass Spectra"
dependencies = [
]
authors = [
    {name = "Montgomery Bohde", email = "mbohde@tamu.edu"},
    {name = "Mrunali Manjrekar"},
    {name = "Runzhong Wang"},
    {name = "Shuiwang Ji"},
    {name = "Connor W. Coley"},
]
maintainers = [
    {name = "Montgomery Bohde", email = "mbohde@tamu.edu"}
]
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["diffms"]
exclude = []
namespaces = false